# renpy-vita

./: .gitignore  .gitmodules  LICENSE  README.md
renpy-vita/: CMakeLists.txt  link_compile_pylibs.bash  link_sources.bash
renpy-vita/source/: main.c
